fixed sqlite bug

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <main>
-    <h1>The Forrest Portfolio</h1>
+    <h1>The All-Terrain Portfolio</h1>
 
-    <img src="/the-forrest-portfolio.jpg" alt="">
+    <img src="/atp.png" alt="">
 
     <p>
         <ul>
@@ -17,5 +17,4 @@
     <h2>The Forrest Portfolio Story</h2>
     <p>The Forrest Portfolio is my personal implementation of the risk parity concept.</p>
 </main>
-
 
