fixed alignment issues

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,10 @@
-<main>
-    <h1>The All-Terrain Portfolio</h1>
+<main class="body">
+    <div class="titleimage">
+        <h1>Be Prepared For Whatever The Economic Road Brings With The All-Terrain Portfolio</h1>
+        <img src="/atp.png" alt="" id="portfolio">
+    </div>
 
-    <img src="/atp.png" alt="">
-
-    <p>
+    <div class="allocation">
         <ul>
             <li>25% Cash</li>
             <li>25% Global Government Bond Ladder</li>
@@ -12,9 +13,9 @@
             <li>10% Gold</li>
             <li>2.5% Bitcoin</li>
         </ul>
-    </p>
+    </div>
 
-    <h2>The Forrest Portfolio Story</h2>
-    <p>The Forrest Portfolio is my personal implementation of the risk parity concept.</p>
+    <h2>The All-Terrain Story</h2>
+    <p>The Forrest Portfolio is my personal implementation of the generalized concept of <strong>risk parity</strong>. </p>
 </main>
 
