--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,16 +6,20 @@
 
     <div class="allocation">
         <ul>
-            <li>25% Cash</li>
-            <li>25% Global Government Bond Ladder</li>
-            <li>25% Global Small Cap Value Stocks</li>
-            <li>12.5% Long/Flat Commodities</li>
-            <li>10% Gold</li>
-            <li>2.5% Bitcoin</li>
+            <li>25% Cash (CBIL)</li>
+            <li>25% Global Government Bond Ladder (XGGB)</li>
+            <li>25% Global Small Cap Value Stocks (VVL)</li>
+            <li>12.5% Long/Flat Commodities (CCOM)</li>
+            <li>10% Gold (KILO.B)</li>
+            <li>2.5% Bitcoin (BTCX.B)</li>
         </ul>
     </div>
 
-    <h2>The All-Terrain Story</h2>
-    <p>The Forrest Portfolio is my personal implementation of the generalized concept of <strong>risk parity</strong>. </p>
+    <div class="story">
+        <h2>The All-Terrain Story</h2>
+        <p>The All-Terrain Portfolio (ATP) is my personal implementation of the generalized concept of <strong>risk parity</strong>. Risk parity seeks to maximize risk-adjusted returns by diversifying a given portfolio amongst as many independent sources of risk as possible. The ATP stands on the shoulders of giants such as Harry Browne, Ray Dalio, Warren Buffett, and other investment luminaries as it seeks to draw from the best ideas of each.</p>
+        <p>From a macro perspective, the ATP invests capital based on the 4 major economic environnments that we experience: inflation, deflation, recession, and prosperity. 25% of the portfolio is dedicated to each of these economic "quadrants". By providing protection no matter what the economy brings, the ATP gives the investor strong growth with minimal downside risk.</p>
+    </div>
+
 </main>
 
