--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,5 +21,16 @@
         <p>From a macro perspective, the ATP invests capital based on the 4 major economic environnments that we experience: inflation, deflation, recession, and prosperity. 25% of the portfolio is dedicated to each of these economic "quadrants". By providing protection no matter what the economy brings, the ATP gives the investor strong growth with minimal downside risk.</p>
     </div>
 
+    <div class="macro">
+        <h2>The Economic Environments</h2>
+        <div class="environments">
+            <img src="atp-environments-2.png" alt="" id="environments">
+        </div>
+    </div>
+
+    <div class="performance">
+        <h2>Performance</h2>
+        <img src="atp-comparison.png" alt="" id="performance">
+    </div>
 </main>
 
