added text explanations to the figures

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,6 +23,7 @@
 
     <div class="macro">
         <h2>The Economic Environments</h2>
+        <p>In the diagram below we can see how each component of the ATP corresponds to specific economic environments. While visually simple, each piece of the portfolio has deep ties to the state of the economy at any given time. Each component of the portfolio has a well-defined and specific purpose. The strategy is made to be as simple as possible, eschewing the fluff that many competing strategies have, while not compromising on its essential goal: maximum diversification.</p>
         <div class="environments">
             <img src="atp-environments-2.png" alt="" id="environments">
         </div>
@@ -30,6 +31,7 @@
 
     <div class="performance">
         <h2>Performance</h2>
+        <p>For the time period in which data is available, the comparison below demonstrates how the ATP has provided superior returns to a conventional 60/40 portfolio, while simultaneously taking on less risk.</p>
         <img src="atp-comparison.png" alt="" id="performance">
     </div>
 </main>
