--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,8 +19,8 @@
 }
 
 .body {
-    width: 80vw;
-    outline: blue solid 2px;
+    width: 70vw;
+    /* outline: blue solid 2px; */
     margin-left: auto;
     margin-right: auto;
     /* text-align: center; */
