added @media queries for mobile

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,7 +32,9 @@
     <div class="performance">
         <h2>Performance</h2>
         <p>For the time period in which data is available, the comparison below demonstrates how the ATP has provided superior returns to a conventional 60/40 portfolio, while simultaneously taking on less risk. Superior risk-adjusted returns are a hallmark trait of properly diversified portfolios.</p>
-        <img src="atp-comparison.png" alt="" id="performance">
+        <div class="performance">
+            <img src="atp-comparison.png" alt="" id="performance">
+        </div>
     </div>
 </main>
 
