--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,17 +18,56 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.body {
-    width: 70vw;
-    /* outline: blue solid 2px; */
-    margin-left: auto;
-    margin-right: auto;
-    /* text-align: center; */
-    font-style: sans-serif;
-    /* background-color: blue; */
+@media screen and (min-width: 1px) {
+    .body {
+        width: 90vw;
+        /* outline: blue solid 2px; */
+        margin-left: auto;
+        margin-right: auto;
+        /* text-align: center; */
+        font-style: sans-serif;
+        /* background-color: blue; */
+    }
+    
+    #portfolio, #environments, #performance {
+        width: 90%;
+    }
 }
 
-.titleimage, .environments {
+@media screen and (min-width: 1000px) {
+    .body {
+        width: 70vw;
+        /* outline: blue solid 2px; */
+        margin-left: auto;
+        margin-right: auto;
+        /* text-align: center; */
+        font-style: sans-serif;
+        /* background-color: blue; */
+    }
+    
+    #portfolio, #environments, #performance {
+        width: 90%;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    .body {
+        width: 50vw;
+        /* outline: blue solid 2px; */
+        margin-left: auto;
+        margin-right: auto;
+        /* text-align: center; */
+        font-style: sans-serif;
+        /* background-color: blue; */
+    }
+    
+    #portfolio, #environments, #performance {
+        width: 80%;
+    }
+
+}
+
+.titleimage, .environments, .performance {
     text-align: center;
 }
 
@@ -48,18 +87,10 @@
     text-align: justify;
 }
 
-#portfolio {
-    width: 60%;
-}
-
-#environments {
-    width: 50%;
+h1 {
+    font-size: 3rem;
 }
 
 #performance {
     width: 100%;
-}
-
-h1 {
-    font-size: 3rem;
 }
