--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,13 +16,13 @@
     </div>
 
     <div class="story">
-        <h2><b>The All-Terrain Story</b></h2>
+        <h2 style="text-align: left;"><b>The All-Terrain Story</b></h2>
         <p>The All-Terrain Portfolio (ATP) is my personal implementation of the generalized concept of <strong>risk parity</strong>. Risk parity seeks to maximize risk-adjusted returns by diversifying a given portfolio amongst as many independent sources of risk as possible. The ATP stands on the shoulders of giants such as Harry Browne, Ray Dalio, Warren Buffett, and other investment luminaries as it seeks to draw from the best ideas of each.</p>
         <p>From a macro perspective, the ATP invests capital based on the 4 major economic environnments that we experience: inflation, deflation, recession, and prosperity. 25% of the portfolio is dedicated to each of these economic "quadrants". By providing protection no matter what the economy brings, the ATP gives the investor strong growth with minimal downside risk.</p>
     </div>
 
     <div class="macro">
-        <h2><b>The Economic Environments</b></h2>
+        <h2 style="text-align: left;"><b>The Economic Environments</b></h2>
         <p>In the diagram below we can see how each component of the ATP corresponds to specific economic environments. While visually simple, each piece of the portfolio has deep ties to the state of the economy at any given time. Each component of the portfolio has a well-defined and specific purpose. The strategy is made to be as simple as possible, eschewing the fluff that many competing strategies have, while not compromising on its essential goal: maximum diversification.</p>
         <div class="environments">
             <img src="atp-environments-2.png" alt="" id="environments">
@@ -30,7 +30,7 @@
     </div>
 
     <div class="performance">
-        <h2><b>Performance</b></h2>
+        <h2 style="text-align: left;"><b>Performance</b></h2>
         <p>For the time period in which data is available, the comparison below demonstrates how the ATP has provided superior returns to a conventional 60/40 portfolio, while simultaneously taking on less risk. Superior risk-adjusted returns are a hallmark trait of properly diversified portfolios.</p>
         <div class="performance">
             <img src="atp-comparison.png" alt="" id="performance">
