--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,19 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "All-Terrain Capital", root_path, id: "logo" %>
-    <nav>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "All-Terrain Capital", root_path, id: "logo", class: "navbar-brand" %>
+    </div>
+    <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "The Software Company",   root_path %></li>
-        <li><%= link_to "The Investment Portfolio",   root_path %></li>
+        <li><%= link_to "The Software Company", root_path %></li>
+        <li><%= link_to "The Investment Portfolio", root_path %></li>
       </ul>
-    </nav>
+    </div>
   </div>
 </header>
