changed H1 font size

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -35,6 +35,10 @@
     #portfolio, #environments, #performance {
         width: 90%;
     }
+
+    h1 {
+        font-size: 3rem;
+    }
 }
 
 @media screen and (min-width: 1000px) {
