--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
 <main class="body">
     <div class="titleimage">
         <h1><b>Be Prepared For Whatever The Economic Road Brings With The All-Terrain Portfolio</b></h1>
-        <img src="/atp-chart.png" alt="" id="portfolio">
+        <img src="/atp-chart.jpg" alt="" id="portfolio">
     </div>
 
     <div class="allocation">
