--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,10 +27,11 @@
 
     <div class="allocation">
         <ul>
-            <li>25% Cash (CBIL)</li>
-            <li>25% Global Government Bond Ladder (XGGB)</li>
-            <li>25% Global Small Cap Value Stocks (VVL)</li>
-            <li>15% Long/Flat Commodities (CCOM)</li>
+            <li>20% Cash (CBIL)</li>
+            <li>20% Global Government Bond Ladder (XGGB)</li>
+            <li>20% Global Small-Cap Value Stocks (VVL)</li>
+            <li>20% Global Cap-Weighted Stocks (VEQT)</li>
+            <li>10% Long/Flat Commodities (CCOM)</li>
             <li>5% Gold (KILO.B)</li>
             <li>5% Bitcoin (BTCX.B)</li>
         </ul>
