added statistics image

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,6 +56,7 @@
         <p>For the time period in which data is available, the comparison below demonstrates how the ATP has provided superior returns to a conventional 60/40 portfolio, while simultaneously taking on less risk. Superior risk-adjusted returns are a hallmark trait of properly diversified portfolios.</p>
         <div class="performance">
             <img src="atp-comparison-4.png" alt="" id="performance">
+            <img src="stats.png" alt="">
         </div>
     </div>
 </main>
