updated charts and allocation

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,16 +21,16 @@
 
 <main class="body">
     <div class="titleimage">
-        <h1><b>Be Prepared For Whatever The Economic Road Brings With The All-Terrain Portfolio</b></h1>
-        <img src="/atp-chart.jpg" alt="" id="portfolio">
+        <h1><b>Be Prepared For Whatever The Economic Road Brings With The Perfect Portfolio</b></h1>
+        <img src="/pp.png" alt="" id="portfolio">
     </div>
 
     <div class="allocation">
         <ul>
             <li>20% Cash (CBIL)</li>
             <li>20% Global Government Bond Ladder (XGGB)</li>
-            <li>20% Global Small-Cap Value Stocks (VVL)</li>
-            <li>20% Global Cap-Weighted Stocks (VEQT)</li>
+            <li>20% Global Value Stocks (VVL)</li>
+            <li>20% Global Momentum Stocks (VMO)</li>
             <li>10% Long/Flat Commodities (CCOM)</li>
             <li>5% Gold (KILO.B)</li>
             <li>5% Bitcoin (BTCX.B)</li>
@@ -38,8 +38,8 @@
     </div>
 
     <div class="story">
-        <h2 style="text-align: left;"><b>The All-Terrain Story</b></h2>
-        <p>The All-Terrain Portfolio (ATP) is my personal implementation of the generalized concept of <strong>risk parity</strong>. Risk parity seeks to maximize risk-adjusted returns by diversifying a given portfolio amongst as many independent sources of risk as possible. The ATP stands on the shoulders of giants such as Harry Browne, Ray Dalio, Warren Buffett, and other investment luminaries as it seeks to draw from the best ideas of each.</p>
+        <h2 style="text-align: left;"><b>The Perfect Portfolio Story</b></h2>
+        <p>The Perfect Portfolio (PP) is my personal implementation of the generalized concept of <strong>risk parity</strong>. Risk parity seeks to maximize risk-adjusted returns by diversifying a given portfolio amongst as many independent sources of risk as possible. The ATP stands on the shoulders of giants such as Harry Browne, Ray Dalio, Warren Buffett, and other investment luminaries as it seeks to draw from the best ideas of each.</p>
         <p>From a macro perspective, the ATP invests capital based on the 4 major economic environnments that we experience: inflation, deflation, recession, and prosperity. 25% of the portfolio is dedicated to each of these economic "quadrants". By providing protection no matter what the economy brings, the ATP gives the investor strong growth with minimal downside risk.</p>
     </div>
 
