--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,14 +7,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "All-Terrain Capital", root_path, id: "logo", class: "navbar-brand" %>
+      <%= link_to "The Perfect Portfolio", root_path, id: "logo", class: "navbar-brand" %>
     </div>
-    <div class="collapse navbar-collapse" id="navbar-collapse">
+    <%# <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <%# <li><%= link_to "The Software Company", root_path %></li> %>
-        <%# <li><%= link_to "The Investment Portfolio", root_path %></li> %>
+        <li><%= link_to "The Software Company", root_path</li> %>
+        <li><%= link_to "The Investment Portfolio", root_path</li> %>
       </ul>
-    </div>
+    </div> %>
   </div>
 </header>
 
