updated charts to include normal commodities

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <main class="body">
     <div class="titleimage">
         <h1><b>Be Prepared For Whatever The Economic Road Brings With The Perfect Portfolio</b></h1>
-        <img src="/pp.png" alt="" id="portfolio">
+        <img src="/pp-final.png" alt="" id="portfolio">
     </div>
 
     <div class="allocation">
@@ -26,7 +26,7 @@
         <h2 style="text-align: left;"><b>The Economic Environments</b></h2>
         <p>In the diagram below we can see how each component of the PP corresponds to specific economic environments. While visually simple, each piece of the portfolio has deep ties to the state of the economy at any given time. Each component of the portfolio has a well-defined and specific purpose. The strategy is made to be as simple as possible, eschewing the fluff that many competing strategies have, while not compromising on its essential goal: maximum diversification.</p>
         <div class="environments">
-            <img src="atp-environments-5.png" alt="" id="environments">
+            <img src="swot-final.png" alt="" id="environments">
         </div>
     </div>
 
