updated comparison charts

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,8 +34,8 @@
         <h2 style="text-align: left;"><b>Performance</b></h2>
         <p>For the time period in which data is available, the comparison below demonstrates how the PP has provided superior returns to a conventional 60/40 portfolio, while simultaneously taking on less risk. Superior risk-adjusted returns are a hallmark trait of properly diversified portfolios.</p>
         <div class="performance">
-            <img src="atp-comparison-4.png" alt="" id="performance">
-            <img src="stats.png" alt="" id="stats">
+            <img src="atp-comparison-5.png" alt="" id="performance">
+            <img src="stats-1.png" alt="" id="stats">
         </div>
     </div>
 </main>
