changed long/flat commodities to just commodities in homepage list

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
             <li>20% Global Government Bond Ladder (XGGB)</li>
             <li>20% Global Value Stocks (VVL)</li>
             <li>20% Global Momentum Stocks (VMO)</li>
-            <li>10% Long/Flat Commodities (CCOM)</li>
+            <li>10% Commodities (CCOM)</li>
             <li>5% Gold (KILO.B)</li>
             <li>5% Bitcoin (BTCX.B)</li>
         </ul>
