--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <main class="body">
     <div class="titleimage">
         <h1><b>Be Prepared For Whatever The Economic Road Brings With The Perfect Portfolio</b></h1>
-        <img src="/pp-final.png" alt="" id="portfolio">
+        <img src="/the-pp-final.png" alt="" id="portfolio">
     </div>
 
     <div class="allocation">
@@ -10,7 +10,7 @@
             <li>20% Global Government Bond Ladder (XGGB)</li>
             <li>20% Global Value Stocks (VVL)</li>
             <li>20% Global Momentum Stocks (VMO)</li>
-            <li>10% Commodities (CCOM)</li>
+            <li>10% Long/Flat Commodities (CCOM)</li>
             <li>5% Gold (KILO.B)</li>
             <li>5% Bitcoin (BTCX.B)</li>
         </ul>
