added a section on rebalancing policy

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,5 +38,11 @@
             <img src="stats-1.png" alt="" id="stats">
         </div>
     </div>
+
+    <div class="performance">
+        <h2 style="text-align: left;"><b>Rebalancing Policy</b></h2>
+        <p>Like all investment strategies, the Perfect Portfolio will require periodic rebalancing on the part of the investor. The <i>general</i> principle I recommend is to rebalance whenever any component of the portfolio deviates from its target weight by either +/-25% on a relative basis or +/-5% on an absolute basis (whichever comes first). As an example, the long/flat commodities component of the portfolio has a target weight of 10% in this strategy. A rebalancing band would be triggered if this specific asset grew as large as 12.5% or declined to as low as 7.5% in absolute terms.</p>
+        <p>Sticking with the strategy elucidated above will serve the investor well. However, in order to add flexibility and tax efficiency, we can include some additional considerations. First, for the 20% cash portion of the portfolio, we can widen the rebalancing band to +/-50% on a relative basis. This would equate to a +/-10% deviation in absolute terms. Secondly, I suggest that the investor make all contributions and withdrawals to the portfolio to the cash component first. This wider rebalancing band, combined with a cash-first policy, will maximize spending flexibility when needed, and also reduce taxes by minimizing the frequency of selling incidents that involve securities with embedded capital gains liabilities.</p>
+    </div>
 </main>
 
