--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,16 @@
 <main class="body">
     <div class="titleimage">
         <h1><b>Be Prepared For Whatever The Economic Road Brings With The Perfect Portfolio</b></h1>
-        <img src="/the-pp-final.png" alt="" id="portfolio">
+        <img src="/perfport.png" alt="" id="portfolio">
     </div>
 
     <div class="allocation">
         <ul>
-            <li>20% Cash (CBIL)</li>
-            <li>20% Global Government Bond Ladder (XGGB)</li>
-            <li>20% Global Value Stocks (VVL)</li>
-            <li>20% Global Momentum Stocks (VMO)</li>
-            <li>10% Long/Flat Commodities (CCOM)</li>
+            <li>25% Cash (CBIL)</li>
+            <li>25% Global Government Bond Ladder (XGGB)</li>
+            <li>12.5% Global Value Stocks (VVL)</li>
+            <li>12.5% Global Momentum Stocks (VMO)</li>
+            <li>15% Long/Flat Commodities (CCOM)</li>
             <li>5% Gold (KILO.B)</li>
             <li>5% Bitcoin (BTCX.B)</li>
         </ul>
