changed info about tilt

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
     <div class="story">
         <h2 style="text-align: left;"><b>The Perfect Portfolio Story</b></h2>
         <p>The Perfect Portfolio (PP) is my personal implementation of the generalized concept of <strong>risk parity</strong>. Risk parity seeks to maximize risk-adjusted returns by diversifying a given portfolio amongst as many independent sources of risk as possible. The PP stands on the shoulders of giants such as Harry Browne, Ray Dalio, Warren Buffett, and other investment luminaries as it seeks to draw from the best ideas of each.</p>
-        <p>From a macro perspective, the PP invests capital based on the 4 major economic environnments that we experience: inflation, deflation, recession, and prosperity. 20% of the portfolio is dedicated to each of these economic "quadrants," with the exception of prosperity. We allocate 40% of the portfolio to prosperity due to it being the most common and remunerative of the environments. Nonetheless, by providing protection no matter what the economy brings, the PP gives the investor strong growth with minimal downside risks.</p>
+        <p>From a macro perspective, the PP invests capital based on the 4 major economic environnments that we experience: inflation, deflation, recession, and prosperity. 25% of the portfolio is dedicated to each of these economic "quadrants." By providing protection no matter what the economy brings, the PP gives the investor strong growth with minimal downside risks.</p>
     </div>
     <br>
     <div class="macro">
