--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,11 +8,19 @@
         <ul>
             <li>25% Cash (CBIL)</li>
             <li>25% Global Government Bond Ladder (XGGB)</li>
-            <li>12.5% Global Value Stocks (VVL)</li>
-            <li>12.5% Global Momentum Stocks (VMO)</li>
-            <li>15% Long/Flat Commodities (CCOM)</li>
-            <li>5% Gold (KILO.B)</li>
-            <li>5% Bitcoin (BTCX.B)</li>
+            <li>25% Global Factor-Tilted Stocks
+                <ul>
+                    <li>12.5% Global Value Stocks (VVL)</li>
+                    <li>12.5% Global Momentum Stocks (VMO)</li>
+                </ul>
+            </li>
+            <li>25% Alternatives
+                <ul>
+                    <li>15% Long/Flat Commodities (CCOM)</li>
+                    <li>5% Gold (KILO.B)</li>
+                    <li>5% Bitcoin (BTCX.B)</li>
+                </ul>
+            </li>
         </ul>
     </div>
     <br>
