--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
         <ul>
             <li>25% Cash (CBIL)</li>
             <li>25% Global Government Bond Ladder (XGGB)</li>
-            <li>25% Global Factor-Tilted Stocks
+            <li>25% Global Factor-Tilted Equity
                 <ul>
                     <li>12.5% Global Value Stocks (VVL)</li>
                     <li>12.5% Global Momentum Stocks (VMO)</li>
@@ -49,8 +49,8 @@
     <br>
     <div class="performance">
         <h2 style="text-align: left;"><b>Rebalancing Policy</b></h2>
-        <p>Like all investment strategies, the Perfect Portfolio will require periodic rebalancing on the part of the investor. The <i>general</i> principle I recommend is to rebalance whenever any component of the portfolio deviates from its target weight by either +/-25% on a relative basis or +/-5% on an absolute basis (whichever comes first). As an example, the long/flat commodities component of the portfolio has a target weight of 10% in this strategy. A rebalancing band would be triggered if this specific asset grew as large as 12.5% or declined to as low as 7.5% in absolute terms.</p>
-        <p>Sticking with the strategy elucidated above will serve the investor well. However, in order to add flexibility and tax efficiency, we can include some additional considerations. First, for the 20% cash portion of the portfolio, we can widen the rebalancing band to +/-50% on a relative basis. This would equate to a +/-10% deviation in absolute terms. Secondly, I suggest that the investor make all contributions and withdrawals to the portfolio to the cash component first. This wider rebalancing band, combined with a cash-first policy, will maximize spending flexibility when needed, and also reduce taxes by minimizing the frequency of selling incidents that involve securities with embedded capital gains liabilities.</p>
+        <p>Like all investment strategies, the Perfect Portfolio will require periodic rebalancing on the part of the investor. The <i>general</i> principle I recommend is to rebalance whenever any component of the portfolio deviates from its target weight by either +/-25% on a relative basis or +/-5% on an absolute basis (whichever comes first). As an example, the long/flat commodities component of the portfolio has a target weight of 15% in this strategy. A rebalancing band would be triggered if this specific asset grew as large as 18.75% or declined to as low as 11.25% in absolute terms.</p>
+        <p>Sticking with the strategy elucidated above will serve the investor well. However, in order to add flexibility and tax efficiency, we can include some additional considerations. First, for the 25% cash portion of the portfolio, we can widen the rebalancing band to +/-10% on an absolute basis. Secondly, I suggest that the investor make all contributions and withdrawals to the portfolio to the cash component first. This wider rebalancing band, combined with a cash-first policy, will maximize spending flexibility when needed, and also reduce taxes by minimizing the frequency of selling incidents that involve securities with embedded capital gains liabilities.</p>
     </div>
     <br>
 </main>
