fixed spelling error

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
         <ul>
             <li>25% Cash (CBIL)</li>
             <li>25% Global Government Bond Ladder (XGGB)</li>
-            <li>25% Global Factor-Tilted Equity
+            <li>25% Global Factor-Tilted Equities
                 <ul>
                     <li>12.5% Global Value Stocks (VVL)</li>
                     <li>12.5% Global Momentum Stocks (VMO)</li>
