changed portfolio name

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <main class="body">
     <div class="titleimage">
-        <h1><b>Be Prepared For Whatever The Economic Road Brings With The Perfect Portfolio</b></h1>
-        <img src="/perfport.png" alt="" id="portfolio">
+        <h1><b>Be Prepared For Whatever The Economic Road Brings With The All-Terrain Portfolio</b></h1>
+        <img src="/atp-final.png" alt="" id="portfolio">
     </div>
 
     <div class="allocation">
@@ -25,8 +25,8 @@
     </div>
     <br>
     <div class="story">
-        <h2 style="text-align: left;"><b>The Perfect Portfolio Story</b></h2>
-        <p>The Perfect Portfolio (PP) is my personal implementation of the generalized concept of <strong>risk parity</strong>. Risk parity seeks to maximize risk-adjusted returns by diversifying a given portfolio amongst as many independent sources of risk as possible. The PP stands on the shoulders of giants such as Harry Browne, Ray Dalio, Warren Buffett, and other investment luminaries as it seeks to draw from the best ideas of each.</p>
+        <h2 style="text-align: left;"><b>The All-Terrain Portfolio Story</b></h2>
+        <p>The All-Terrain Portfolio (ATP) is my personal implementation of the generalized concept of <strong>risk parity</strong>. Risk parity seeks to maximize risk-adjusted returns by diversifying a given portfolio amongst as many independent sources of risk as possible. The PP stands on the shoulders of giants such as Harry Browne, Ray Dalio, Warren Buffett, and other investment luminaries as it seeks to draw from the best ideas of each.</p>
         <p>From a macro perspective, the PP invests capital based on the 4 major economic environnments that we experience: inflation, deflation, recession, and prosperity. 25% of the portfolio is dedicated to each of these economic "quadrants." By providing protection no matter what the economy brings, the PP gives the investor strong growth with minimal downside risks.</p>
     </div>
     <br>
@@ -49,7 +49,7 @@
     <br>
     <div class="performance">
         <h2 style="text-align: left;"><b>Rebalancing Policy</b></h2>
-        <p>Like all investment strategies, the Perfect Portfolio will require periodic rebalancing on the part of the investor. The <i>general</i> principle I recommend is to rebalance whenever any component of the portfolio deviates from its target weight by either +/-25% on a relative basis or +/-5% on an absolute basis (whichever comes first). As an example, the long/flat commodities component of the portfolio has a target weight of 15% in this strategy. A rebalancing band would be triggered if this specific asset grew as large as 18.75% or declined to as low as 11.25% in absolute terms.</p>
+        <p>Like all investment strategies, the All-Terrain Portfolio will require periodic rebalancing on the part of the investor. The <i>general</i> principle I recommend is to rebalance whenever any component of the portfolio deviates from its target weight by either +/-25% on a relative basis or +/-5% on an absolute basis (whichever comes first). As an example, the long/flat commodities component of the portfolio has a target weight of 15% in this strategy. A rebalancing band would be triggered if this specific asset grew as large as 18.75% or declined to as low as 11.25% in absolute terms.</p>
         <p>Sticking with the strategy elucidated above will serve the investor well. However, in order to add flexibility and tax efficiency, we can include some additional considerations. First, for the 25% cash portion of the portfolio, we can widen the rebalancing band to +/-10% on an absolute basis. Secondly, I suggest that the investor make all contributions and withdrawals to the portfolio to the cash component first. This wider rebalancing band, combined with a cash-first policy, will maximize spending flexibility when needed, and also reduce taxes by minimizing the frequency of selling incidents that involve securities with embedded capital gains liabilities.</p>
     </div>
     <br>
