--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
         <ul>
             <li>25% Cash (CBIL)</li>
             <li>25% Global Government Bond Ladder (XGGB)</li>
-            <li>25% Global Factor-Tilted Equities (FEQT)</li>
+            <li>25% Global Value Stocks (VVL)</li>
             <li>25% Long/Flat Commodities (CCOM)</li>
         </ul>
     </div>
