changed asset allocation

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,10 +6,9 @@
 
     <div class="allocation">
         <ul>
-            <li>25% Cash (CBIL)</li>
-            <li>25% Global Government Bond Ladder (XGGB)</li>
-            <li>25% Global Value Stocks (VVL)</li>
-            <li>25% Long/Flat Commodities (CCOM)</li>
+            <li>70% Vanguard Conservative Income ETF Portfolio (VCIP)</li>
+            <li>15% Vanguard Global Value Factor ETF (VVL)</li>
+            <li>15% CI Auspice Broad Commodity ETF (CCOM)</li>
         </ul>
     </div>
     <br>
