--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,14 +6,15 @@
 
     <div class="allocation">
         <ul>
-            <li>70% Vanguard Conservative Income ETF Portfolio (VCIP)</li>
-            <li>15% Vanguard Global Value Factor ETF (VVL)</li>
-            <li>15% CI Auspice Broad Commodity ETF (CCOM)</li>
+            <li>62.5% Vanguard Conservative Income ETF Portfolio (VCIP)</li>
+            <li>12.5% Vanguard Global Value Factor ETF (VVL)</li>
+            <li>20% CI Auspice Broad Commodity ETF (CCOM)</li>
+            <li>5% Bitcoin</li>
         </ul>
     </div>
     <br>
     <div class="story">
-        <h2 style="text-align: left;"><b>The All-Terrain Portfolio Story</b></h2>
+        <h2 style="text-align: left;"><b>The Pragmatic Portfolio Story</b></h2>
         <p>The All-Terrain Portfolio (ATP) is my personal implementation of the generalized concept of <strong>risk parity</strong>. Risk parity seeks to maximize risk-adjusted returns by diversifying a given portfolio amongst as many independent sources of risk as possible. The ATP stands on the shoulders of giants such as Harry Browne, Ray Dalio, Warren Buffett, and other investment luminaries as it seeks to draw from the best ideas of each.</p>
         <p>From a macro perspective, the ATP invests capital based on the 4 major economic environnments that we experience: inflation, deflation, recession, and prosperity. 25% of the portfolio is dedicated to each of these economic "quadrants." By providing protection no matter what the economy brings, the ATP gives the investor strong growth with minimal downside risks.</p>
     </div>
